// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormFieldsAutoComplete Additional options merged in 1`] = `
<div
  className="components-base-control"
>
  <div
    className="components-base-control__field"
  >
    <label
      className="components-base-control__label"
      htmlFor="autoComplete1"
    >
      Options
    </label>
    <input
      className="caldera-field caldera-field-autocomplete"
      id="autoComplete1"
      onChange={[Function]}
      suggestions={
        Array [
          "f",
          "y",
          "%selectFieldId%",
          "Select Field Label",
          "%checkboxFieldLabel%",
          "Checkbox Labe",
        ]
      }
      value={
        Array [
          "One",
          "Three",
        ]
      }
    />
  </div>
  <p
    className="components-base-control__help"
    id="autoComplete1__help"
  >
    Help text
  </p>
</div>
`;

exports[`FormFieldsAutoComplete Matches snapshot 1`] = `
<div
  className="components-base-control"
>
  <div
    className="components-base-control__field"
  >
    <label
      className="components-base-control__label"
      htmlFor="autoComplete1"
    >
      Options
    </label>
    <input
      className="caldera-field caldera-field-autocomplete"
      id="autoComplete1"
      onChange={[Function]}
      suggestions={
        Array [
          "%selectFieldId%",
          "Select Field Label",
          "%checkboxFieldLabel%",
          "Checkbox Labe",
        ]
      }
      value={
        Array [
          "One",
          "Three",
        ]
      }
    />
  </div>
  <p
    className="components-base-control__help"
    id="autoComplete1__help"
  >
    Help text
  </p>
</div>
`;
